# POfR-Final-Project

./: README.md  data_collection.sh
parallel_code/: LUDecomposition.py  Parallel Inverse Kinematics.ipynb  RRT Sampling.ipynb  RRT_Sampling.ipynb  SampleValidationCUDA.py  SampleValidationSerial.py  SampleValidationThreads.py  parallel_sample_validation.py  sample_validation_testing.py
parallel_rrt_ws_manytree/src/Universal_Robots_ROS2_Description/launch/: view_ur.launch.py
parallel_rrt_ws_manytree/src/Universal_Robots_ROS2_Description/rviz/: view_robot.rviz
parallel_rrt_ws_manytree/src/Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro
parallel_rrt_ws_manytree/src/assignment3/: setup.py
parallel_rrt_ws_manytree/src/assignment3/assignment3/: mp.py  sys_urdf_setup.py
parallel_rrt_ws_manytree/src/assignment3/launch/: ur5_launch.py
parallel_rrt_ws_manytree/src/obstacle_controller/: package.xml
parallel_rrt_ws_manytree/src/obstacle_controller/src/: obstacle_controller.cpp
parallel_rrt_ws_manytree/src/robot_sim/launch/: kuka_lwr_launch.py
parallel_rrt_ws_manytree/src/robot_sim/robot_sim/: position_command.py
parallel_rrt_ws_manytree/src/robot_sim/src/: joint_state_publisher_.cpp  robot.cpp  robot_sim_bringup.cpp  trajectory_executer.cpp
parallel_rrt_ws_manytree/src/ur5_moveit_config/: package.xml
parallel_rrt_ws_onetree/src/assignment3/assignment3/: mp.py
parallel_rrt_ws_onetree/src/assignment3/urdf/: ur5_urdf.xml
parallel_rrt_ws_onetree/src/robot_sim/: package.xml
parallel_rrt_ws_onetree/src/robot_sim/launch/: ur5_launch.py
parallel_rrt_ws_onetree/src/robot_sim/src/: position_controller.cpp
parallel_rrt_ws_validation/src/assignment3/assignment3/: .autograder.py.swo  mp.py
ros_ws_a3/src/assignment3/: package.xml
ros_ws_a3/src/assignment3/assignment3/: autograder.py
ros_ws_a3/src/robot_sim/: CMakeLists.txt
ros_ws_a3/src/robot_sim/src/: velocity_controller.cpp
serial_rrt_ws/.svn/: wc.db
serial_rrt_ws/src/assignment3/assignment3/: mp.py
serial_rrt_ws/src/ur5_moveit_config/config/: ur.srdf
(+9 files in other folders)
